2016-11-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Run.pm (check_amreport): skip_size default
	* installcheck/failure-client-custom-compress-end.pl,
	  installcheck/failure-client-custom-compress-no-exec.pl,
	  installcheck/failure-client-custom-compress-not-found.pl,
	  installcheck/failure-client-custom-compress.pl,
	  installcheck/failure-client-encrypt-end.pl,
	  installcheck/failure-client-encrypt-no-exec.pl,
	  installcheck/failure-client-encrypt-not-found.pl,
	  installcheck/failure-client-encrypt.pl,
	  installcheck/failure-server-custom-compress-end.pl,
	  installcheck/failure-server-encrypt-end.pl:
	  Remove 'sendbackup: size' lines

2016-11-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm (show): Print if the label do not match
	  the labelstr
	* perl/Amanda/Rest/Storages.pm: Set label_match
	* server-src/amtape.pl (inventory): Print if the label do not match
	  the labelstr
	* installcheck/Amanda_Rest_Storages.pl, installcheck/amtape.pl: Fix


2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amxml.c, device-src/vfs-device.c,
	  perl/Amanda/Config.swg: Fix warning found by clang

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Changer_aggregate.pl: Set the aggregate
	  state-filename property

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Storages.pl: Set the aggregate state_filename

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Storages.pl: Typo

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm: s/NO-STORAGE/ by the config_name
	* perl/Amanda/Changer/aggregate.pm: Various fix
	* server-src/driverio.c: Add comments
	* installcheck/Amanda_Changer_disk.pl: Fix comment
	* installcheck/Amanda_Rest_Storages.pl: Test chg-aggregate
	* installcheck/Installcheck/Changer.pm: Improve error message